--- a/index.html
+++ b/index.html
@@ -334,6 +334,12 @@
     </style>
 </head>
 <body>
+    <!-- Background Music -->
+    <audio id="bgMusic" loop autoplay>
+        <source src="assets/background_music.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="container">
         <!-- Profile Image - Replace with your own -->
         <img src="images/avatar.JPG" alt="Profile" class="profile-image" id="profileImage">
@@ -433,6 +439,19 @@
         // Optional: Add your own profile image
         // Replace the placeholder by uncommenting below and adding your image URL
         // document.getElementById('profileImage').src = 'your-image-url.jpg';
+
+        // Background Music Autoplay
+        const bgMusic = document.getElementById('bgMusic');
+        
+        // Try to autoplay on page load
+        window.addEventListener('load', () => {
+            bgMusic.play().catch(() => {
+                // Autoplay was blocked by browser, try again on first user interaction
+                document.body.addEventListener('click', () => {
+                    bgMusic.play();
+                }, { once: true });
+            });
+        });
     </script>
 </body>
 </html>
