--- a/index.html
+++ b/index.html
@@ -13,13 +13,56 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+            background: #0a0a0a;
             color: #ffffff;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: 
+                radial-gradient(circle at 20% 30%, rgba(0, 255, 136, 0.08) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(0, 102, 204, 0.08) 0%, transparent 50%),
+                radial-gradient(circle at 40% 80%, rgba(0, 255, 136, 0.05) 0%, transparent 40%);
+            animation: gradientShift 15s ease infinite;
+            z-index: 0;
+        }
+
+        body::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: 
+                linear-gradient(rgba(255, 255, 255, 0.02) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+            background-size: 50px 50px;
+            z-index: 0;
+        }
+
+        @keyframes gradientShift {
+            0%, 100% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+            33% {
+                transform: translate(5%, 5%) rotate(120deg);
+            }
+            66% {
+                transform: translate(-5%, 5%) rotate(240deg);
+            }
         }
 
         .container {
@@ -27,6 +70,8 @@
             width: 100%;
             text-align: center;
             animation: fadeIn 0.6s ease-in;
+            position: relative;
+            z-index: 1;
         }
 
         @keyframes fadeIn {
@@ -45,21 +90,24 @@
             height: 160px;
             border-radius: 50%;
             margin: 0 auto 30px;
-            border: 4px solid #ff6b35;
+            border: 4px solid transparent;
+            background: linear-gradient(#0a0a0a, #0a0a0a) padding-box,
+                        linear-gradient(135deg, #00ff88 0%, #0066cc 100%) border-box;
             object-fit: cover;
-            box-shadow: 0 8px 32px rgba(255, 107, 53, 0.3);
-            transition: transform 0.3s ease;
+            box-shadow: 0 8px 32px rgba(0, 255, 136, 0.2);
+            transition: all 0.3s ease;
         }
 
         .profile-image:hover {
             transform: scale(1.05);
+            box-shadow: 0 12px 40px rgba(0, 255, 136, 0.4), 0 0 20px rgba(0, 102, 204, 0.3);
         }
 
         h1 {
             font-size: 3rem;
             font-weight: 800;
             margin-bottom: 16px;
-            background: linear-gradient(135deg, #ff6b35 0%, #f7931a 100%);
+            background: linear-gradient(135deg, #00ff88 0%, #0066cc 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -102,9 +150,9 @@
 
         .main-link:hover {
             background: rgba(255, 255, 255, 0.08);
-            border-color: rgba(255, 107, 53, 0.5);
+            border-color: rgba(0, 255, 136, 0.5);
             transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(255, 107, 53, 0.2);
+            box-shadow: 0 8px 24px rgba(0, 255, 136, 0.3), 0 0 12px rgba(0, 102, 204, 0.2);
         }
 
         .link-icon {
@@ -210,7 +258,8 @@
         .social-icon:hover {
             background: rgba(255, 255, 255, 0.1);
             transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(255, 107, 53, 0.3);
+            border-color: rgba(0, 255, 136, 0.5);
+            box-shadow: 0 6px 20px rgba(0, 255, 136, 0.3), 0 0 10px rgba(0, 102, 204, 0.2);
         }
 
         .social-icon svg {
