--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
     <!-- Background Music -->
     <audio id="bg-music" loop>
-        <source src="assets/background_music.mp3" type="audio/mpeg">
+        <source src="assets/thunder.MP3" type="audio/mpeg">
     </audio>
 
     <!-- Volume Control -->
